fix(Skills): Finally fixed the icon alignments !

--- a/_sass/bootstrap/_type.scss
+++ b/_sass/bootstrap/_type.scss
@@ -91,6 +91,7 @@ mark,
 }
 .list-inline-item {
   display: inline-block;
+  vertical-align: middle;
 
   &:not(:last-child) {
     margin-right: $list-inline-padding;
